# ChangeLog for sys-apps/baselayout-vserver
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-vserver/ChangeLog,v 1.6 2005/06/08 09:06:21 hollow Exp $

*baselayout-vserver-1.11.12-r4 (08 Jun 2005)

  08 Jun 2005; Benedikt Boehm <hollow@gentoo.org>
  -baselayout-vserver-1.0.ebuild, +baselayout-vserver-1.11.12-r4.ebuild:
  added compatible versioning with sys-apps/baselayout; new, revised patch;
  1.0 is obsolete

  29 May 2005; <solar@gentoo.org> baselayout-vserver-1.0.ebuild:
  - update baselayout-vserver to use libc expanded variable elibc_uclibc vs
  uclibc so USE=-* works

  21 May 2005; Michael Sterrett <mr_bones_@gentoo.org>
  baselayout-vserver-1.0.ebuild:
  needs deps before going stable

  18 May 2005; Benedikt Boehm <hollow@gentoo.org>
  baselayout-vserver-1.0.ebuild:
  moved to stable, but still in p.mask

  20 Apr 2005; Benedikt Boehm <hollow@gentoo.org>
  baselayout-vserver-1.0.ebuild:
  fixed patch

*baselayout-vserver-1.0 (20 Apr 2005)

  20 Apr 2005; Benedikt Boehm <hollow@gentoo.org> +files/copyright,
  +files/vserver-changes, +metadata.xml, +baselayout-vserver-1.0.ebuild:
  Initial version of baselayout-vserver (using rc-scripts-1.7.0)
