@@ -1,1 +1,1 @@
-MD5 98072769efc3daec3edcf60d89b62c42 rc-scripts-1.6.12-vserver.tar.bz2 105693
+MD5 b3baae8b085c3849d8fb5af81c80d022 rc-scripts-1.6.12-vserver.tar.bz2 104662
