@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/baselayout-vserver
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-vserver/ChangeLog,v 1.6 2005/06/08 09:06:21 hollow Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout-vserver/ChangeLog,v 1.7 2005/06/12 08:24:22 hollow Exp $
+
+  12 Jun 2005; Benedikt Boehm <hollow@gentoo.org>
+  baselayout-vserver-1.11.12-r4.ebuild:
+  minor fixes + cleanup
 
 *baselayout-vserver-1.11.12-r4 (08 Jun 2005)
 
